--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,19 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=afridio
+      - DB_USER=postgres
+      - DB_PASS=postgres123882
+    depends_on:
+      - db
+  db:
+    image: postgres:9.6.5
+    environment:
+      - POSTGRES_DB=afridio
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres123882
