--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 
 before_script:
   - pip install docker-compose
-  - docker-compose build
+  - docker-compose up --build
 
 script:
   - docker-compose run web sh -c "python manage.py test && flake8"
