--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ python:
 services:
   - docker
 
-before_script:
-  - pip install docker-compose
-  - docker-compose up --build
+before_script: pip install docker-compose
 
 script:
   - docker-compose run web sh -c "python manage.py test && flake8"
