--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:9.6.5
+    image: postgres:9.6.19-alpine
     environment:
       - POSTGRES_DB=afridio
       - POSTGRES_USER=postgres
