--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-  - docker-compose run web sh -c "python manage.py wait_for_db; python manage.py wait_for_db python manage.py test && flake8"
+  - docker-compose run web sh -c "python manage.py wait_for_db; python manage.py test && flake8"
