--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Django==2.2.15
+django-allauth==0.42.0
+django-crispy-forms==1.9.2
 djangorestframework==3.11.1
-psycopg2>=2.7.5,<=2.8.5
-Pillow==7.2.0
 flake8==3.8.3
-django-allauth
+Pillow==7.2.0
+psycopg2>=2.7.5,<=2.8.5
+
