--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Django==2.2.15
 django-allauth==0.42.0
+django-countries==6.1.3
 django-crispy-forms==1.9.2
 djangorestframework==3.11.1
 flake8==3.8.3
 Pillow==7.2.0
 psycopg2>=2.7.5,<=2.8.5
-
+stripe==2.51.0
