--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==2.2.15
 django-allauth==0.42.0
 django-countries==6.1.3
 django-crispy-forms==1.9.2
+django-rest-auth==0.9.5
 djangorestframework==3.11.1
 flake8==3.8.3
 Pillow==7.2.0
