--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,9 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DB_HOST=db
-      - DB_NAME=afridio
-      - DB_USER=postgres
-      - DB_PASS=postgres123882
+      sh -c "python manage.py wait_for_db --settings=app.settings.development &&
+             python manage.py migrate --settings=app.settings.development &&
+             python manage.py runserver 0.0.0.0:8000 --settings=app.settings.development"
     depends_on:
       - db
   db:
