--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ django-rest-auth==0.9.5
 djangorestframework==3.11.1
 flake8==3.8.3
 Pillow==7.2.0
+python-decouple==3.3
 psycopg2>=2.7.5,<=2.8.5
 stripe==2.51.0
