--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+boto3==1.15.1
 Django==2.2.15
 django-allauth==0.42.0
 django-countries==6.1.3
 django-crispy-forms==1.9.2
+django-minio-storage==0.3.8
 django-rest-auth==0.9.5
+django-storages==1.10.1
 djangorestframework==3.11.1
 flake8==3.8.3
 Pillow==7.2.0
