Add image resize feature using celery

--- a/app/.env
+++ b/app/.env
@@ -10,3 +10,7 @@ STRIPE_TEST_SECRET_KEY=sk_test_51HHP6NAf02FTIaFc0el4fMmpHJFfh0eCwVygdxXO0mO2rt6X
 MINIO_STORAGE_ACCESS_KEY=minioadmin
 MINIO_STORAGE_SECRET_KEY=minioadmin
 MINIO_STORAGE_ENDPOINT=192.168.8.100:9000
+DEV_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
+DEV_CELERY_RESULT_BACKEND=redis://redis:6379
+PROD_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
+PROD_CELERY_RESULT_BACKEND=redis://redis:6379
