--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 boto3==1.15.1
+celery==4.4.7
 Django==2.2.15
 django-allauth==0.42.0
 django-countries==6.1.3
@@ -11,4 +12,5 @@ flake8==3.8.3
 Pillow==7.2.0
 python-decouple==3.3
 psycopg2>=2.7.5,<=2.8.5
+redis==3.5.3
 stripe==2.51.0
