--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ flake8==3.8.3
 Pillow==7.2.0
 python-decouple==3.3
 psycopg2>=2.7.5,<=2.8.5
+python-ffmpeg-video-streaming==0.1.14
 redis==3.5.3
 stripe==2.51.0
