--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-minio-storage==0.3.8
 django-rest-auth==0.9.5
 django-storages==1.10.1
 djangorestframework==3.11.1
+filetype==1.0.7
 flake8==3.8.3
 Pillow==7.2.0
 python-decouple==3.3
