--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-storages==1.10.1
 djangorestframework==3.11.1
 filetype==1.0.7
 flake8==3.8.3
+minio==6.0.2
 Pillow==7.2.0
 psycopg2>=2.7.5,<=2.8.5
 pyotp==2.4.0
