--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ djangorestframework==3.11.1
 filetype==1.0.7
 flake8==3.8.3
 minio==6.0.2
+nexmo>=2.4.0
 Pillow==7.2.0
 psycopg2>=2.7.5,<=2.8.5
+PyJWT>=1.7.1
 python-decouple==3.3
 redis==3.5.3
 stripe==2.51.0
