--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-crispy-forms==1.9.2
 django-minio-storage==0.3.8
 django-storages==1.10.1
 djangorestframework==3.11.1
+drf-nested-routers==0.92.5
 filetype==1.0.7
 flake8==3.8.3
 minio==6.0.2
