--- a/app/.env
+++ b/app/.env
@@ -16,6 +16,6 @@ DEV_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
 DEV_CELERY_RESULT_BACKEND=redis://redis:6379
 PROD_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
 PROD_CELERY_RESULT_BACKEND=redis://redis:6379
-TWILIO_PHONE=+12026098359
-TWILIO_ACCOUNT_SID=ACba7f0e1b69da540e3b5ef831bde3211c
-TWILIO_AUTH_TOKEN=750f87d938b8236c3568e07a872a4431
+TWILIO_PHONE=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
