--- a/app/.env
+++ b/app/.env
@@ -16,6 +16,6 @@ DEV_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
 DEV_CELERY_RESULT_BACKEND=redis://redis:6379
 PROD_CELERY_BROKER=amqp://rabbitmq:rabbitmq@broker:5672
 PROD_CELERY_RESULT_BACKEND=redis://redis:6379
-TWILIO_PHONE=
-TWILIO_ACCOUNT_SID=
+TWILIO_PHONE=+251xxxxxxxxxxx
+TWILIO_ACCOUNT_SID=SDK-ksksksks
 TWILIO_AUTH_TOKEN=
